// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed state of recovery codes dialog 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:hover,
.c10:focus {
  background: rgba(255,255,255,0.13);
}

.c10:active {
  background: rgba(255,255,255,0.18);
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.main"
        >
          An error has occurred
        </div>
      </div>
      <div
        class="c7"
        kind="danger"
      >
        failed to generate recovery codes
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="primary"
        >
          Try again
        </button>
        <button
          class="c10"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render successful first timer recovery codes dialog 1`] = `
.c4 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 8px;
  overflow: hidden;
}

.c9 {
  box-sizing: border-box;
  min-width: 584px;
  padding: 32px;
  background-color: #222C59;
  flex: 4;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c16 {
  box-sizing: border-box;
  padding: 8px;
  padding-bottom: 24px;
  padding-left: 16px;
  background-color: #0C143D;
  border-radius: 8px;
}

.c19 {
  box-sizing: border-box;
  margin-left: 8px;
}

.c24 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 32px;
  flex: 2;
}

.c26 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:hover,
.c20:focus {
  background: #B29DFF;
}

.c20:active {
  background: #C5B6FF;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c22:hover,
.c22:focus {
  background: #B29DFF;
}

.c22:active {
  background: #C5B6FF;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 40px;
  width: 100%;
}

.c23:hover,
.c23:focus {
  background: #B29DFF;
}

.c23:active {
  background: #C5B6FF;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 8px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c7 {
  display: flex;
  flex-wrap: wrap;
}

.c10 {
  display: flex;
  flex-direction: column;
}

.c17 {
  display: flex;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  padding: 0px;
  background: none;
}

.c5 .print-only {
  visibility: hidden;
}

.c21 {
  max-width: 48px;
  width: 100%;
  padding: 4px 8px;
  min-height: 10px;
  font-size: 10px;
}

.c25 {
  background: rgba(255,255,255,0.07);
}

@media print {
  .c5 {
    overflow: hidden;
  }

  .c5 .print,
  .c5 .print-only {
    visibility: visible;
  }

  .c5 .no-print {
    visibility: hidden;
  }

  .c5 .codes {
    font-size: 16px;
  }
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7 sc-gEvEer c6 c8 no-print"
          overflow="hidden"
        >
          <div
            class="c9 c10 print"
          >
            <div
              class="c11"
            >
              <div
                class="c12"
                color="text.main"
              >
                Backup & Recovery Codes
              </div>
              <div
                class="c13"
              >
                Please save these account recovery codes in a safe offline place.
              </div>
              <div
                class="c14"
              >
                You can use each code once if you lose your second factor authenticator or password.
              </div>
            </div>
            <div
              class="c4"
            >
              <div
                class="c15"
              >
                Recovery Codes (
                3
                 Total)
              </div>
              <div
                class="c16 c17"
              >
                <div
                  class="c18 codes"
                  style="white-space: pre-wrap;"
                >
                  tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
                </div>
                <div
                  class="c19 c10 no-print"
                >
                  <button
                    class="c20 c21"
                    kind="primary"
                  >
                    COPY
                  </button>
                  <button
                    class="c22 c21"
                    kind="primary"
                  >
                    PRINT
                  </button>
                </div>
              </div>
              <div
                class="c14 print-only"
              >
                Created: Fri Aug 30 2019 11:00:00 GMT+0000 (Coordinated Universal Time)
              </div>
              <button
                class="c23 no-print"
                kind="primary"
                width="100%"
              >
                I have saved my Recovery Codes - Close dialog
              </button>
            </div>
          </div>
          <div
            class="c24 c10 c25"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                Why do I need these codes?
              </div>
              <div
                class="c28"
                color="text.slightlyMuted"
              >
                Use them in the event of losing your password or two-factor device.
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                How long do the codes last for?
              </div>
              <div
                class="c28"
                color="text.slightlyMuted"
              >
                Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render successful recovery codes dialog 1`] = `
.c4 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 8px;
  overflow: hidden;
}

.c9 {
  box-sizing: border-box;
  min-width: 584px;
  padding: 32px;
  background-color: #222C59;
  flex: 4;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c16 {
  box-sizing: border-box;
  padding: 8px;
  padding-bottom: 24px;
  padding-left: 16px;
  background-color: #0C143D;
  border-radius: 8px;
}

.c19 {
  box-sizing: border-box;
  margin-left: 8px;
}

.c24 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 32px;
  flex: 2;
}

.c26 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:hover,
.c20:focus {
  background: #B29DFF;
}

.c20:active {
  background: #C5B6FF;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c22:hover,
.c22:focus {
  background: #B29DFF;
}

.c22:active {
  background: #C5B6FF;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 40px;
  width: 100%;
}

.c23:hover,
.c23:focus {
  background: #B29DFF;
}

.c23:active {
  background: #C5B6FF;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 8px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c7 {
  display: flex;
  flex-wrap: wrap;
}

.c10 {
  display: flex;
  flex-direction: column;
}

.c17 {
  display: flex;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  padding: 0px;
  background: none;
}

.c5 .print-only {
  visibility: hidden;
}

.c21 {
  max-width: 48px;
  width: 100%;
  padding: 4px 8px;
  min-height: 10px;
  font-size: 10px;
}

.c25 {
  background: rgba(255,255,255,0.07);
}

@media print {
  .c5 {
    overflow: hidden;
  }

  .c5 .print,
  .c5 .print-only {
    visibility: visible;
  }

  .c5 .no-print {
    visibility: hidden;
  }

  .c5 .codes {
    font-size: 16px;
  }
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7 sc-gEvEer c6 c8 no-print"
          overflow="hidden"
        >
          <div
            class="c9 c10 print"
          >
            <div
              class="c11"
            >
              <div
                class="c12"
                color="text.main"
              >
                New Backup & Recovery Codes
              </div>
              <div
                class="c13"
              >
                Please save these account recovery codes in a safe offline place.
              </div>
              <div
                class="c14"
              >
                You can use each code once if you lose your second factor authenticator or password.
              </div>
            </div>
            <div
              class="c4"
            >
              <div
                class="c15"
              >
                Recovery Codes (
                3
                 Total)
              </div>
              <div
                class="c16 c17"
              >
                <div
                  class="c18 codes"
                  style="white-space: pre-wrap;"
                >
                  tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
                </div>
                <div
                  class="c19 c10 no-print"
                >
                  <button
                    class="c20 c21"
                    kind="primary"
                  >
                    COPY
                  </button>
                  <button
                    class="c22 c21"
                    kind="primary"
                  >
                    PRINT
                  </button>
                </div>
              </div>
              <div
                class="c14 print-only"
              >
                Created: Fri Aug 30 2019 11:00:00 GMT+0000 (Coordinated Universal Time)
              </div>
              <button
                class="c23 no-print"
                kind="primary"
                width="100%"
              >
                I have saved my new Recovery Codes - Close dialog
              </button>
            </div>
          </div>
          <div
            class="c24 c10 c25"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                Why do I need these codes?
              </div>
              <div
                class="c28"
                color="text.slightlyMuted"
              >
                Use them in the event of losing your password or two-factor device.
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                How long do the codes last for?
              </div>
              <div
                class="c28"
                color="text.slightlyMuted"
              >
                Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
              </div>
            </div>
            <div
              class="c4"
            >
              <div
                class="c27"
              >
                What about my old codes?
              </div>
              <div
                class="c28"
                color="text.slightlyMuted"
              >
                Your old recovery codes are no longer valid, please replace them with these new ones.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
